Fixes on generalization of capabilities for multiple computers