@@ -12,28 +12,38 @@ import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.file.Paths;
 
 public class BaseTest {
     public AndroidDriver driver;
     public AppiumDriverLocalService service;
     @BeforeClass
     public void configureAppium() throws URISyntaxException, MalformedURLException {
+        String ipAdressAppium = "127.0.0.1";
+
         // Code to start the server
         service = new AppiumServiceBuilder().withAppiumJS(new File("C://Users//juan.potes//AppData//Roaming//npm//node_modules//appium//build//lib//main.js"))
-                .withIPAddress("127.0.0.1").usingPort(4723).build();
+                .withIPAddress(ipAdressAppium).usingPort(4723).build();
 
         service.start();
 
         // Specify capabilities
         UiAutomator2Options options = new UiAutomator2Options();
 
-        // PERSONAL C
+        // Device
         //options.setDeviceName("emulator-5554"); //Emulator
+        options.setDeviceName("ccb76178"); //Device physical
+
+        // PERSONAL C
         //options.setApp("D:\\Users\\ASUS\\Desktop\\Cursos\\3_Appium Mobile Automation\\AppiumProject1\\src\\test\\java\\resources\\ApiDemos-debug.apk");
 
         // WORK C
-        options.setDeviceName("ccb76178"); //Device physical
-        options.setApp("C:\\Users\\juan.potes\\Documents\\Cursos\\Appium\\AppiumProject1\\src\\test\\java\\resources\\ApiDemos-debug.apk");
+        //String apkPath = "C:\\Users\\juan.potes\\Documents\\Courses\\Appium_MobileTesting\\AppiumProject1\\src\\test\\resources\\ApiDemos-debug.apk";
+        String apkPath = Paths.get("src", "test", "resources", "ApiDemos-debug.apk").toAbsolutePath().toString();
+        options.setApp(apkPath);
+        System.out.println("PATH: " + apkPath);
+
+        options.setAutomationName("UiAutomator2");
 
         // First create the object for Android Driver or iOS Driver
         // In this case Android Driver UiAutomator2
@@ -44,7 +54,9 @@ public class BaseTest {
         // AndroidDriver driver = new AndroidDriver(new URI("http://192.168.0.11:4723/").toURL(), options);
 
         // WORK C
-        driver = new AndroidDriver(new URI("http://127.0.0.1:4723/").toURL(), options);
+        String unifiedURL = "http://" + ipAdressAppium + ":4723";
+        System.out.println("Unified URL: " + unifiedURL);
+        driver = new AndroidDriver(new URL(unifiedURL), options);
     }
 
     @AfterClass
